<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:textColor="#FF0000"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_brands"
        android:icon="@drawable/brands"
        android:textColor="#FF0000"
        android:title="@string/brands" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/follow"
        android:textColor="#000000"
        android:title="@string/favorites" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/lk"
        android:textColor="#000000"
        android:title="@string/profile" />

</menu>



