<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:fontFamily="@font/robotobold"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="#000000"
        android:textSize="32sp"
        android:layout_marginBottom="48dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/robotolight"
        android:hint="@string/login"
        android:paddingStart="16dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/robotolight"
        android:paddingStart="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="17dp"
        android:background="@drawable/edit_text_background" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:textSize="16dp"
        android:layout_marginLeft="-110dp"
        android:fontFamily="@font/robotolight"
        android:text="@string/forgot_password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/robotobold"
        android:text="@string/login_action"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/robotobold"
        android:gravity="center"
        android:text="Регистрация"
        android:textColor="#000000"
        android:textSize="16sp" />
</LinearLayout>
